--- a/coba.html
+++ b/coba.html
@@ -1,2 +1,2 @@
-<h1>Raffi Listyo NIM 25106050072 Prodi Informatika Fakultas Sains dan Teknologi</h1>
+<h1>Raffi Listyo NIM 25106050072 Prodi Informatika Fakultas Sains dan Teknologi UIN Sunan Kalijaga</h1>
 
